DELETE 완성/ CRUD완성

--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -75,11 +75,9 @@
 					<div class="section-title mb-0">
 						<h2>Get in touch</h2>
 					</div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore mag na aliqua. Quis ipsum suspendisse ultrices gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doe iusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
+					<p>Email을 통해 연락 주시거나 아래 form을 통해 글을 남겨주세요</p>
 					<ul>
-						<li>Main Road , No 25/11</li>
-						<li>+34 556788 3221</li>
-						<li>contact@solmusic.com</li>
+						<li>sdr2936@gmail.com</li>
 					</ul>
 					<form class="contact-from">
 						<div class="row">
